@ chore: upgrade to Java 21 and modernize codebase
- Bump maven.compiler.release from 11 to 21 (CI already uses Java 21)
- Replace anonymous Runnable with lambda expression
- Replace Collections.emptyList() with List.of()
- Replace StringTokenizer with String.split() and pattern matching instanceof
- Use text blocks for multi-line string constants
- Add diamond operator and parameterized generics on raw types

All 5 modules compile and test successfully with release 21.

Co-Authored-By: Claude <noreply@anthropic.com>
@